[tool.poetry]
name = "pensionfund"
version = "0.1.0"
description = ""
authors = ["lisannebleiksch <lisannebleiksch@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
